Bug 121431 - LoadDefaultProfileDir() returns an error when it shouldn't. Returning this error, which isn't really an error, aborts startup when creating a new profile in turbo mode. r=bnesse@netscape.com/sr=alecf@netscape.com